test/fail/const-var-field.mo
let o : {x : Nat} = object { public var x = 0 };
